@@ -13,7 +13,6 @@ ext {
     checkerFrameworkPath = System.getenv('CHECKERFRAMEWORK') ?: "${jsr308}/checker-framework"
     checkerJar = "${checkerFrameworkPath}/checker/dist/checker.jar"
     afu = "${jsr308}/annotation-tools/annotation-file-utilities"
-    z3Jar = "${projectDir}/lib/com.microsoft.z3.jar"
     lingelingTar = "${projectDir}/lib/lingeling.tar.gz"
     dljcScript = "${jsr308}/do-like-javac/dljc"
 
@@ -22,6 +21,20 @@ ext {
     isJava8 = JavaVersion.current() == JavaVersion.VERSION_1_8
 
     errorproneJavacVersion = '9+181-r4173-1'
+
+    // Keep in sync with checker-framework/build.gradle.
+    // TODO: find a way to directly use that variable.
+    compilerArgsForRunningCF = [
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+            "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+    ]
 }
 
 println '===================================='
@@ -57,24 +70,25 @@ dependencies {
     }
 
     implementation 'org.plumelib:options:1.0.5'
-    implementation 'org.plumelib:plume-util:1.5.8'
+    implementation 'org.plumelib:plume-util:1.5.9'
 
-    implementation 'com.google.guava:guava:31.0.1-jre'
+    implementation 'com.google.guava:guava:31.1-jre'
 
     // AFU is an "includedBuild" imported in settings.gradle, so the version number doesn't matter.
     // https://docs.gradle.org/current/userguide/composite_builds.html#settings_defined_composite
-    implementation('org.checkerframework:annotation-file-utilities:*') {
+    implementation('io.github.eisop:annotation-file-utilities:*') {
         exclude group: 'com.google.errorprone', module: 'javac'
     }
 
     // Serialize constraints
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
     // Pretty print serialized constraints
-    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.9.1'
 
     implementation 'org.ow2.sat4j:org.ow2.sat4j.core:2.3.6'
     implementation 'org.ow2.sat4j:org.ow2.sat4j.maxsat:2.3.6'
-    implementation files(z3Jar)
+
+    implementation 'tools.aqua:z3-turnkey:4.11.2'
 
     testImplementation fileTree(dir: "${checkerFrameworkPath}/framework-test/build/libs", include: "framework-test-*.jar")
     // Mocking library. Used in a couple tests
@@ -99,13 +113,6 @@ sourceSets {
             srcDirs = ["tests"]
         }
     }
-}
-
-task buildZ3(type: Exec) {
-    description 'Build Z3 solver'
-    onlyIf { !(new File(z3Jar).exists()) }
-    workingDir './scripts'
-    commandLine './buildZ3'
 }
 
 task buildLingeling(type: Exec) {
@@ -141,6 +148,7 @@ test {
         // Without this, the test throw "java.lang.OutOfMemoryError: Java heap space"
         // Corresponding pull request: https://github.com/opprop/checker-framework-inference/pull/263
         forkEvery(1)
+        jvmArgs += compilerArgsForRunningCF
     }
 
     testLogging {
@@ -170,7 +178,6 @@ test {
 }
 
 compileJava {
-    dependsOn(buildZ3)
     dependsOn(buildLingeling)
     dependsOn(buildDLJC)
     options.compilerArgs = [
@@ -210,7 +217,6 @@ task dist(dependsOn: shadowJar, type: Copy) {
             "will build checker-framework-inference.jar, copy all the relevant runtime jars into " +
             "the dist directory."
     from files(
-            "${checkerFrameworkPath}/checker/dist/jdk8.jar",
             "${checkerFrameworkPath}/checker/dist/checker.jar",
             "${checkerFrameworkPath}/checker/dist/checker-qual.jar",
             "${checkerFrameworkPath}/checker/dist/checker-util.jar",
